--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -8,6 +8,7 @@
     tools:context=".Formulario">
 
     <ScrollView
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -34,6 +35,7 @@
                 android:textStyle="bold" />
 
             <LinearLayout
+                android:id="@+id/layoutp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -41,6 +43,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
+                android:onClick="onCheckboxClicked"
                 android:orientation="vertical">
 
                 <TextView
